fixed text overflow on navbar

--- a/styles/navigation-bar.css
+++ b/styles/navigation-bar.css
@@ -16,10 +16,17 @@
   margin-left: 36px;
 }
 .logo {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   color: var(--navbar-text-color);
   font-weight: bold;  
   text-decoration: none;
+  transition: font-size 0s;
+}
+@media (max-width: 600px) {
+  .logo {
+    font-size: 1.75rem;
+    text-wrap: wrap;
+  }
 }
 
 .right-section {
